--- a/index.html
+++ b/index.html
@@ -7,7 +7,67 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
-
+    <header>
+      <h1><a href="landmarks">5280 Landmarks</a></h1>
+      <h4><a href="login">Login</a></h4>
+    </header>
+    <nav>
+      <h3>
+        <a href="building">Building</a>
+        <a href="art">Art</a>
+        <a href="featured">Featured</a>
+      </h3>
+      
+    </nav>
+    <section>
+      <img id="img1" src="images/1.jpg" alt="Denver Art Museum"><br>
+    </section>
+    <aside>
+      <div id="div1">
+      <h2>Larimer Square</h2>
+      <img class="img2" src="images/2.jpg">
+      </div>
+      <div id="div2">
+      <h2>Millenium Bridge</h2>
+      <img class="img2" src="images/5.jpg">
+      </div>
+      <div id="div3">
+      <h2>Molly Brown House</h2>
+      <img class="img2" src="images/6.jpg">
+    </div>
+    </aside>
+    <article id="sect1">
+      <h1>Denver Art Museum</h1>
+      <p>Lorem ipsum dolor sit amet, quis idque munere est ex. 
+        Eos id soluta meliore menandri, sed ex graeci prompta sapientem. 
+        Cum in verterem partiendo, quod partiendo principes vix et. 
+        Ne eam virtute abhorreant. At qui doming nemore mediocritatem, 
+        ei pri bonorum blandit, vim elitr recusabo salutatus eu.<br><br>
+        Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. 
+        Graeci scriptorem cum ea, an ignota signiferumque nec. 
+        No dicunt sanctus moderatius sed, meliore inermis ei mea. 
+        Utinam impedit maiestatis sea ad, quis efficiendi eu mel, 
+        ea solet placerat phaedrum vis. Et vix causae aliquam, 
+        commodo blandit imperdiet ex his.<br><br>
+        Duo an eleifend omittantur, te sint civibus recusabo eos. 
+        An ius corpora definiebas cotidieque. Eu pri reque sapientem 
+        contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, 
+        ut facilisi omittantur nec.<br><br>
+        Nam ad quas consul salutandi, sea ad verterem quaestio. 
+        Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. 
+        Mel at latine veritus.
+      </p>
+    </article>
+    
+      <footer>Alia utinam maiorum pro te, eum ex sonet putent discere. 
+        Mea cu possit forensibus comprehensam. Mel te primis commodo, 
+        nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, 
+        malorum iuvaret usu id. At mea lobortis pertinacia, 
+        scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, 
+        eos rebum nulla qualisque ea, vis malis clita efficiantur ut. 
+        At vel lorem paulo soluta, ancillae quaestio no quo, 
+        id vim blandit voluptatum.
+      </footer>
   </body>
 </html>
 
